--- a/src/config.json
+++ b/src/config.json
@@ -1,4 +1,4 @@
 {
   "clientId": "Jm00zM24uLa9eHJpzO9mTCO-zUjtscPvFvBcuhADpZM",
-  "redirectUri": "https://mi-hiker.github.io/your-new-ynab-project/"
+  "redirectUri": "https://mi-hiker.github.io/your-new-ynab-project/#"
 }
