--- a/src/config.json
+++ b/src/config.json
@@ -1,4 +1,4 @@
 {
   "clientId": "Jm00zM24uLa9eHJpzO9mTCO-zUjtscPvFvBcuhADpZM",
-  "redirectUri": "https://mi-hiker.github.io/your-new-ynab-project/#"
+  "redirectUri": "https://app.ynab.com/oauth/authorize?client_id=Jm00zM24uLa9eHJpzO9mTCO-zUjtscPvFvBcuhADpZM&redirect_uri=urn%3Aietf%3Awg%3Aoauth%3A2.0%3Aoob&response_type=code&scope="
 }
